--- a/Views/Home/BurialDetails.cshtml
+++ b/Views/Home/BurialDetails.cshtml
@@ -23,7 +23,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-12 mx-auto shadow-lg m-5 rounded" style="border: 3px solid black; background-color: #E4D4C8;">
-                            <div class="text-left text-light">
+                            <div class="text-left text-dark">
 
                                 <!--Row 1-->
                                 <div class="form-group row mt-5" style="margin-bottom:0px!important;margin-left:20px!important;margin-right:10px!important;justify-content:center!important">
