--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -46,7 +46,7 @@
                         <li class="nav-item"><a class="nav-link active" asp-controller="Home" asp-action="Index">Home</a></li>
                         <li class="nav-item"><a class="nav-link active" asp-controller="Home" asp-action="CreateBurial">Create Burial</a></li>
                         <li class="nav-item"><a class="nav-link active" asp-controller="Home" asp-action="BurialList">Burial Summary List</a></li>
-                        <li class="nav-item"><a class="nav-link active" asp-controller="Home" asp-action="PhotoCollection">Photo Gallery</a></li>
+                        <li class="nav-item"><a class="nav-link active" asp-controller="Home" asp-action="PhotoGallery">Photo Gallery</a></li>
                         <li class="nav-item dropdown">
                             <a class="dropdown-toggle nav-link" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#">More <i class="fas fa-angle-down"></i></a>
                             <ul class="dropdown-menu">
