--- a/wwwroot/css/templatemo-style.css
+++ b/wwwroot/css/templatemo-style.css
@@ -115,12 +115,10 @@ button, input {
 
     input[type="search"] {
         -webkit-appearance: textfield;
-    }*/*/
-
+    }*/ */
 /*input[type="search"]:-webkit-search-decoration {
     -webkit-appearance: none;
 }*/
-
 /*textarea {
     overflow: auto;
     vertical-align: top;
@@ -136,10 +134,10 @@ a {
     color: #6cc0f7;
     -webkit-transition: all 150ms ease-in-out;
     -moz-transition: all 150ms ease-in-out;*/
-    /*    -ms-transition: all 150ms ease-in-out;*/
-    /*-o-transition: all 150ms ease-in-out;
+/*    -ms-transition: all 150ms ease-in-out;*/
+/*-o-transition: all 150ms ease-in-out;
     transition: all 150ms ease-in-out;*/
-    /*    text-decoration: none !important;*/
+/*    text-decoration: none !important;*/
 /*}
 
     a:hover {
@@ -149,7 +147,6 @@ a {
 h1, h2, h3, h4, h5 {
     color: #fff;
 }*/
-
 /*h1 {
 }
 
@@ -164,7 +161,6 @@ h4 {
 
 h5 {
 }*/
-
 /*::-webkit-input-placeholder {
     color: #fff;
 }
@@ -387,39 +383,38 @@ h5 {
     position: relative;
     z-index: 6;
 }*/
-
 .post-masonry {
     margin-bottom: 30px;
 }
 
-    .post-masonry .post-thumb {
-        border: 10px solid #fff;
-        overflow: hidden;
-        position: relative;
-    }
+.post-masonry .post-thumb {
+    border: 10px solid #fff;
+    overflow: hidden;
+    position: relative;
+}
 
-        /*.post-masonry .post-thumb img {
+    /*.post-masonry .post-thumb img {
             width: 100%;
             display: block;
         }*/
 
-        .post-masonry .post-thumb .title-over {
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            width: 100%;
-            background: rgba(0,0,0,0.9);
-            padding: 15px 20px;
-        }
+    .post-masonry .post-thumb .title-over {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        background: rgba(0,0,0,0.9);
+        padding: 15px 20px;
+    }
 
-/*            .post-masonry .post-thumb .title-over h4 {
+    /*            .post-masonry .post-thumb .title-over h4 {
             }
 
             .post-masonry .post-thumb .title-over a {
                 color: #fff;
             }*/
 
-        /*.post-masonry .post-thumb .post-hover {
+    /*.post-masonry .post-thumb .post-hover {
             position: absolute;
             width: 100%;
             height: 100%;
@@ -450,33 +445,33 @@ h5 {
 
             .post-masonry .post-thumb .post-hover a {
                 color: #fff !important;
-            }
-
-            .post-masonry .post-thumb .post-hover i {
-                display: block;
-                margin-bottom: 10px;
-            }
-
-            .post-masonry .post-thumb .post-hover p {
-            }
-
-            .post-masonry .post-thumb .post-hover span {
-                margin-bottom: 15px;
-                display: block;
             }*/
 
-        .post-masonry .post-thumb:hover .title-over {
-            -webkit-transition: all 150ms ease-in-out;
-            -moz-transition: all 150ms ease-in-out;
-            -ms-transition: all 150ms ease-in-out;
-            -o-transition: all 150ms ease-in-out;
-            transition: all 150ms ease-in-out;
-            visibility: hidden;
-            opacity: 0;
-            bottom: -50px;
-        }
+    .post-masonry .post-thumb .post-hover i {
+        display: block;
+        margin-bottom: 10px;
+    }
 
-        /*.post-masonry .post-thumb:hover .post-hover {
+    /*.post-masonry .post-thumb .post-hover p {
+            }*/
+
+    .post-masonry .post-thumb .post-hover span {
+        margin-bottom: 15px !important;
+        display: block;
+    }
+
+    .post-masonry .post-thumb:hover .title-over {
+        -webkit-transition: all 150ms ease-in-out;
+        -moz-transition: all 150ms ease-in-out;
+        -ms-transition: all 150ms ease-in-out;
+        -o-transition: all 150ms ease-in-out;
+        transition: all 150ms ease-in-out;
+        visibility: hidden;
+        opacity: 0;
+        bottom: -50px;
+    }
+
+/*.post-masonry .post-thumb:hover .post-hover {
             top: 0;
             visibility: visible;
             opacity: 1;
