--- a/Views/Shared/Components/Filter/Default.cshtml
+++ b/Views/Shared/Components/Filter/Default.cshtml
@@ -5,7 +5,7 @@
     <div class="card">
         <div class="card-header" id="headingOne">
             <h5 class="mb-0">
-                <button class="btn btn-link btn-lg" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                <button class="btn btn-link btn-lg" style="color: #F89D29!important;" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
                     Filter
                 </button>
             </h5>
@@ -61,7 +61,7 @@
     <div class="card">
         <div class="card-header" id="headingTwo">
             <h5 class="mb-0">
-                <button class="btn btn-link btn-lg collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                <button class="btn btn-link btn-lg collapsed" style="color: #F89D29!important;" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                     Search
                 </button>
             </h5>
