Took out test github stuff

--- a/Views/Home/CreateBurial.cshtml
+++ b/Views/Home/CreateBurial.cshtml
@@ -8,8 +8,8 @@
 <body class="job-single-page">
     <section class="heading-section section section-on-bg">
         <div class="hero-wrapper">
-            <div class="create-hero-holder" style="background: $text-color-primary url('../images/hero/create.jpg') no-repeat 50% 50%!important;"></div>
-            <div class="hero-mask-gradient" style="background: $text-color-primary url('../images/hero/create.jpg') no-repeat 50% 50%!important;"></div>
+            <div class="hero-holder"></div>
+            <div class="hero-mask-gradient"></div>
         </div><!--//hero-wrapper-->
         <div class="container heading-content">
             <h2 class="headline">@ViewData["Title"]</h2>
