--- a/Views/Home/EditBurial.cshtml
+++ b/Views/Home/EditBurial.cshtml
@@ -8,7 +8,7 @@
 <body class="job-single-page">
     <section class="heading-section section section-on-bg">
         <div class="hero-wrapper">
-            <div class="edit-hero-holder"></div>
+            <div class="hero-holder"></div>
             <div class="hero-mask-gradient"></div>
         </div><!--//hero-wrapper-->
         <div class="container heading-content">
