--- a/Views/Home/PhotoGallery.cshtml
+++ b/Views/Home/PhotoGallery.cshtml
@@ -12,7 +12,7 @@
 <body class="job-single-page" style="background-color: #E4D4C8">
     <section class="heading-section section section-on-bg">
         <div class="hero-wrapper">
-            <div class="photo-hero-holder"></div>
+            <div class="hero-holder"></div>
             <div class="hero-mask-gradient"></div>
         </div><!--//hero-wrapper-->
         <div class="container heading-content">
