--- a/Views/Home/CreateBurial.cshtml
+++ b/Views/Home/CreateBurial.cshtml
@@ -292,7 +292,7 @@
                                 <!-- ACCORDION 1 -->
 
 
-                                <div id="accordion">
+                                <div id="accordion" class="m-5">
                                     <div class="card">
                                         <div class="card-header" id="headingOne">
                                             <h5 class="mb-0">
