--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -87,8 +87,8 @@
                     <div class="footer-col-inner">
                         <h3 class="col-title">About</h3>
                         <ul class="footer-menu list-unstyled">
-                            <li><a class="dropdown-item" asp-controller="Home" asp-action="ResearchBlog">Research Blog</a></li>
-                            <li><a class="dropdown-item" asp-controller="Home" asp-action="AboutUs">About Us</a></li>
+                            <li><a class="text-link" asp-controller="Home" asp-action="ResearchBlog">Research Blog</a></li>
+                            <li><a class="text-link" asp-controller="Home" asp-action="AboutUs">About Us</a></li>
                         </ul>
                     </div><!--//footer-col-inner-->
                 </div><!--//footer-col-->
@@ -96,7 +96,7 @@
                     <div class="footer-col-inner">
                         <h3 class="col-title">Upload Links</h3>
                         <ul class="footer-menu list-unstyled">
-                            <li><a class="text-link" asp-controller="Home" asp-action="Burial">Burial Summary List & Records</a></li>
+                            <li><a class="text-link" asp-controller="Home" asp-action="Burial">Burial Summary List</a></li>
                             @if (_signInManager.IsSignedIn(User) && User.IsInRole("Researcher") || User.IsInRole("Admin"))
                             {
                                 <li class="nav-item"><a class="nav-link active" asp-controller="Home" asp-action="CreateBurial">Create Burial</a></li>
@@ -112,10 +112,8 @@
                     <div class="footer-col-inner">
                         <h3 class="col-title">Useful Links</h3>
                         <ul class="footer-menu list-unstyled">
-                            <li><a class="text-link" href="#">Sign up</a></li>
-                            <li><a class="text-link" href="#">Login</a></li>
-                            <li><a class="dropdown-item" asp-controller="Home" asp-action="ContactUs">Contact Us</a></li>
-                            <li><a class="dropdown-item" asp-controller="Home" asp-action="SupportPage">Support</a></li>
+                            <li><a class="text-link" asp-controller="Home" asp-action="ContactUs">Contact Us</a></li>
+                            <li><a class="text-link" asp-controller="Home" asp-action="SupportPage">Support</a></li>
 
                         </ul>
                     </div>
@@ -124,7 +122,6 @@
                     <div class="footer-col-inner">
                         <h3 class="col-title">Legal</h3>
                         <ul class="footer-menu list-unstyled">
-                            <li><a class="text-link" asp-controller="Home" asp-action="Privacy">Privacy</a></li>
                             <li><a class="text-link" href="#">Terms of Services</a></li>
                             <li><a class="text-link" href="#">Policies</a></li>
                         </ul>
