--- a/Views/Home/CreateBurial.cshtml
+++ b/Views/Home/CreateBurial.cshtml
@@ -296,9 +296,9 @@
                                     <div class="card">
                                         <div class="card-header" id="headingOne">
                                             <h5 class="mb-0">
-                                                <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne" style="color:#F89D29;font-size:16px">
+                                                <a class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne" style="color:#F89D29;font-size:16px">
                                                     Other Fields (Section 1)
-                                                </button>
+                                                </a>
                                             </h5>
                                         </div>
 
@@ -590,9 +590,9 @@
                                     <div class="card">
                                         <div class="card-header" id="headingTwo">
                                             <h5 class="mb-0">
-                                                <button class="btn btn-link" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo" style="color:#F89D29;font-size:16px">
+                                                <a class="btn btn-link" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo" style="color:#F89D29;font-size:16px">
                                                     Other Fields (Section 2)
-                                                </button>
+                                                </a>
                                             </h5>
                                         </div>
                                         <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
@@ -969,7 +969,7 @@
                                     </div>
                                 </div>
 
-                                <button class="button btn btn-lg btn-light px-4 pt-2 float-right" style="font-size:medium!important;margin:10px!important">Submit</button>
+                                <button type="submit" class="button btn btn-lg btn-light px-4 pt-2 float-right" style="font-size:medium!important;margin:10px!important">Submit</button>
                             </form>
                         </div>
                     </div>
