--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -140,7 +140,7 @@
 
         <section class="apps-section section text-center">
             <h2 class="section-title">Want to Know More?</h2>
-            <a class="btn btn-cta btn-primary" asp-controller="Home" asp-action="ContactPage">Contact us</a>
+            <a class="btn btn-cta btn-primary" asp-controller="Home" asp-action="ContactUs">Contact us</a>
 
         </section><!--//apps-section-->
 
